cluster/apps/networking/opnsense/opnsense.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: opnsense
  namespace: networking
spec:
  ports:
    - protocol: TCP
      port: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: opnsense
  namespace: networking
subsets:
  - addresses:
      - ip: 192.168.1.1
    ports:
      - port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: apiserver
  namespace: networking
spec:
  ports:
    - protocol: TCP
      port: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: apiserver
  namespace: networking
subsets:
  - addresses:
      - ip: 192.168.1.4
      - ip: 192.168.1.7
      - ip: 192.168.1.9
    ports:
      - port: 6443
---
