cluster/apps/networking/opnsense/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: opnsense
  namespace: networking
spec:
  ingressClassName: nginx-internal
  rules:
  - host: &host opnsense.${SECRET_DOMAIN}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: opnsense
              port:
                number: 443
  tls:
    - hosts:
      - *host
      secretName: wildcard-cert-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: apiserver
  namespace: networking
spec:
  ingressClassName: nginx-internal
  rules:
  - host: &host apiserver.${SECRET_DOMAIN}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: apiserver
              port:
                number: 443
  tls:
    - hosts:
      - *host
      secretName: wildcard-cert-tls
